--- a/AngularFrontend/src/app/my-module/customer-module/add-customer-user/add-customer-user.component.html
+++ b/AngularFrontend/src/app/my-module/customer-module/add-customer-user/add-customer-user.component.html
@@ -45,7 +45,8 @@
         <label for="phonenumber">Phone Number</label>
         <input id="phonenumber" type="text" name="phonenumber" formControlName="PhoneNumber">
         
-    
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" formControlName="password">
       
        
         </div>
