--- a/AngularFrontend/src/app/my-module/customer-module/add-customer-user/add-customer-user.component.css
+++ b/AngularFrontend/src/app/my-module/customer-module/add-customer-user/add-customer-user.component.css
@@ -23,7 +23,7 @@ form {
   
   
   
-  input[type=submit],input[type=button],input[type=number] {
+  input[type=submit],input[type=button],input[type=number],input[type=password] {
      
       color: white;
       font-size:20px;
@@ -104,7 +104,7 @@ form {
       background: Transparent;
     }
   
-    input[type=text] {
+    input[type=text],input[type=password] {
       width: 95%; 
       padding: 12px;  
       border: 1px solid #ccc;
